tests/semantic_errors/testcase18.c
// invalid casting string -> string

int main(void){
    string x;
    x = (string) x;
}